--- a/translations/soul+intl-icu.es.xlf
+++ b/translations/soul+intl-icu.es.xlf
@@ -3264,7 +3264,7 @@
       </notes>
       <segment>
         <source>Die Freundschaftswerbung</source>
-        <target>Die Freundschaftswerbung</target>
+        <target>Patrocinio</target>
       </segment>
     </unit>
     <unit id="m5DCahY" name="Wenn ihr neue Spieler zu &quot;MyHordes&quot; einladet, erhaltet ihr zahlreiche Vorteile!">
@@ -3275,7 +3275,7 @@
       </notes>
       <segment>
         <source>Wenn ihr neue Spieler zu "MyHordes" einladet, erhaltet ihr zahlreiche Vorteile!</source>
-        <target>Wenn ihr neue Spieler zu "MyHordes" einladet, erhaltet ihr zahlreiche Vorteile!</target>
+        <target>¡Disfruta de ventajas excepcionales invitando a tus amigos a jugar en "MyHordes"!</target>
       </segment>
     </unit>
     <unit id="hWsy49U" name="Lass dich überraschen!">
@@ -3297,7 +3297,7 @@
       </notes>
       <segment>
         <source>Du kannst nach Anmeldung des geworbenen Spielers sofort mit ihm in einer Koalition spielen.</source>
-        <target>Du kannst nach Anmeldung des geworbenen Spielers sofort mit ihm in einer Koalition spielen.</target>
+        <target>Puedes divertirte con tus amigos invitándoles a unirse a tu alianza desde esta misma página.</target>
       </segment>
     </unit>
     <unit id="phHRy7R" name="Du bekommst einen frischen jugendlichen Teint und einen Babypopo.">
@@ -3506,7 +3506,7 @@
       </notes>
       <segment>
         <source>Wie funktioniert das genau?</source>
-        <target>Wie funktioniert das genau?</target>
+        <target>¿Cómo lo hago?</target>
       </segment>
     </unit>
     <unit id="fXK1bMa" name="Du kannst aus mehreren Methoden wählen:">
@@ -3517,7 +3517,7 @@
       </notes>
       <segment>
         <source>Du kannst aus mehreren Methoden wählen:</source>
-        <target>Du kannst aus mehreren Methoden wählen:</target>
+        <target>Tienes varios métodos disponibles:</target>
       </segment>
     </unit>
     <unit id="e60hBsn" name="Versende einen Einladungs-Link:">
@@ -3528,7 +3528,7 @@
       </notes>
       <segment>
         <source>Versende einen Einladungs-Link:</source>
-        <target>Versende einen Einladungs-Link:</target>
+        <target>Invítales a unirse a ti desde esta dirección:</target>
       </segment>
     </unit>
     <unit id="uB2Vk6P" name="oder">
@@ -3539,7 +3539,7 @@
       </notes>
       <segment>
         <source>oder</source>
-        <target>oder</target>
+        <target>O</target>
       </segment>
     </unit>
     <unit id="oIxZIjf">
@@ -3550,7 +3550,7 @@
       </notes>
       <segment>
         <source>Sag dem geworbenen Spieler, dass er bei der Anmeldung im Feld "Pate" deinen Namen eintragen soll:</source>
-        <target>Sag dem geworbenen Spieler, dass er bei der Anmeldung im Feld "Pate" deinen Namen eintragen soll:</target>
+        <target>dile de ingresar tu nick en el espacio "Patrocinio" del formulario de inscripción:</target>
       </segment>
     </unit>
     <unit id="meMyGfH">
@@ -3561,7 +3561,7 @@
       </notes>
       <segment>
         <source>Verwende einen der hier unten angezeigten Banner für deine E-Mail Signatur, auf Facebook oder in deinem Lieblingsforum (Wenn sich jemand über deinen Banner anmeldet, wirst du automatisch als Pate eingetragen!).</source>
-        <target>Verwende einen der hier unten angezeigten Banner für deine E-Mail Signatur, auf Facebook oder in deinem Lieblingsforum (Wenn sich jemand über deinen Banner anmeldet, wirst du automatisch als Pate eingetragen!).</target>
+        <target>utiliza uno de los banners como firma de tu e-mail, en Facebook, en tu blog o en un foro ¡(quienes hagan clic en él quedarán registrados autiomáticamente cuando se inscriban!).</target>
       </segment>
     </unit>
     <unit id="fUGf6MZ" name="HTML Code">
@@ -3572,7 +3572,7 @@
       </notes>
       <segment>
         <source>HTML Code</source>
-        <target>HTML Code</target>
+        <target>Código HTML</target>
       </segment>
     </unit>
     <unit id="GOqvgvj" name="BBCode">
@@ -3594,7 +3594,7 @@
       </notes>
       <segment>
         <source>Freunde</source>
-        <target>Freunde</target>
+        <target>Patrocinio</target>
       </segment>
     </unit>
     <unit id="LzzllLx" name="Empfänger">
@@ -3615,7 +3615,7 @@
       </notes>
       <segment>
         <source>In diesem Abschnitt findest du alle bisher von dir gespielten Partien.</source>
-        <target> Esta es una lista de tus partidas jugadas.</target>
+        <target>Esta es una lista de tus partidas jugadas.</target>
       </segment>
     </unit>
     <unit id="P5HPUHF" name="Verlauf meiner Städte">
